[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/hero-no-sword.png" type="Texture" id=1]
[ext_resource path="res://Hero.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.26926, 1.7568 )

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 27 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/HoldPosition:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 4.5, 11.9906 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/HoldPosition:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4.50781, 11.9734 ), Vector2( 2.5, 12.0078 ), Vector2( 2.50781, 9.99219 ), Vector2( 3.5098, 10.9783 ), Vector2( 4.49191, 11.9967 ), Vector2( 4.5, 11 ) ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 3.63109
height = 4.99868

[node name="Hero" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.150894, 0.185242 )
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( -0.187225, -14.4108 )
texture = ExtResource( 1 )
hframes = 28
frame = 27

[node name="HoldPosition" type="Position2D" parent="sprite"]
position = Vector2( 4.5, 11.9906 )

[node name="animationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/Walk = SubResource( 3 )

[node name="raycast" type="RayCast2D" parent="."]
position = Vector2( -0.0766258, -4.41722 )
enabled = true
cast_to = Vector2( 1, 0 )
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="hitBox" type="Area2D" parent="."]
visible = false

[node name="collision" type="CollisionShape2D" parent="hitBox"]
visible = false
position = Vector2( -0.221592, -4.49157 )
shape = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position = Vector2( 0.177948, 3.38041 )
current = true
limit_top = 0
limit_bottom = 0
drag_margin_h_enabled = true
drag_margin_left = 0.5
drag_margin_top = 1.0
drag_margin_right = 0.5
drag_margin_bottom = 1.0
editor_draw_limits = true
editor_draw_drag_margin = true
